--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env to use these variables
 
 # Backend API URL - for development and testing
-VITE_API_URL=http://localhost:5001/api
+#VITE_API_URL=http://localhost:5001/api
 
 # Backend API URL - for production
-# VITE_API_URL=https://leopay-backend.onrender.com/api 
+VITE_API_URL=https://leopay-backend.onrender.com/api 
