Add Vercel serverless proxy for permanent CORS fix

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,7 @@
     }
   ],
   "rewrites": [
+    { "source": "/api/proxy/(.*)", "destination": "/api/proxy" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 } 
